--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>GDSC Git</title>
 </head>
 <body>
-    <p>We are learning git</p>
+    <img src="https://res.cloudinary.com/startup-grind/image/upload/c_fill,dpr_2.0,f_auto,g_center,h_1080,q_100,w_1080/v1/gcs/platform-data-dsc/chapter_banners/logo_4osUi1m.jpg" height="700" width="1800" alt="">
+
+    <h1 style="font-size: 35px;margin-left: 25%;">WELCOME TO GDSC KTU CHAPTER</h1>
 </body>
 </html>
